--- a/src/components/profile-view/profile-view.scss
+++ b/src/components/profile-view/profile-view.scss
@@ -1,20 +1,6 @@
 .fav-movie {
   margin-bottom: 15px;
 
-  figure {
-    position: relative;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    margin: auto;
-    width: 100%;
-
-    img {
-      height: 400px;
-      margin: auto;
-    }
-  }
-
   figcaption {
     text-align: center;
   }
@@ -27,4 +13,18 @@
 
 .card {
   margin-bottom: 15px;
+
+  figure {
+    position: relative;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: wrap;
+    margin: auto;
+    width: 100%;
+
+    img {
+      height: 400px;
+      margin: auto;
+    }
+  }
 }
